--- a/maria's_garden_center/.classpath
+++ b/maria's_garden_center/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Pedro/Downloads/sqlite-jdbc-3.27.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Pedro/Downloads/gson-2.8.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/usuario/Curso Java/gson-2.8.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/usuario/Curso Java/sqlite-jdbc-3.27.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
