--- a/maria's_garden_center/.project
+++ b/maria's_garden_center/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>maria&apos;s_garden_center</name>
+	<name>vivero</name>
 	<comment></comment>
 	<projects>
 	</projects>
